# waveray

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  concepts.md  datamesh.md  design-v0.2-auto-boundary-and-grids.md  index.md  installation.md  limitations.md  quickstart.md  research-nearshore-transformation-sota-2026-07-06.md  usage.md  validation.md  wavespectra.md
examples/: demo_geraldton.py  demo_holland.py  validate_abrolhos.py
notebooks/: 01_holland_downscaling.ipynb  02_abrolhos_validation.ipynb  03_boundary_line_termination.ipynb
src/nearshore_transform/: __init__.py  bathymetry.py  breaking.py  export.py  model.py  operator.py  rays.py
src/waveray/: __init__.py  bathymetry.py  breaking.py  dispersion.py  export.py  model.py  operator.py  rays.py  spectra.py
tests/: test_breaking.py  test_dispersion.py  test_export.py  test_island.py  test_model.py  test_operator.py  test_rays.py  test_wavespectra_compat.py
