[project]
name = "waveray"
version = "0.1.0"
description = "Fast nearshore spectral wave transformation: backward ray-traced transfer operators with refraction, shoaling, bottom friction and depth-limited breaking"
readme = "README.md"
authors = [{ name = "Oceanum", email = "developers@oceanum.science" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["waves", "nearshore", "spectral", "ray-tracing", "swan", "metocean", "oceanography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=2.0",
    "xarray>=2024.1",
    "wavespectra>=4.0",
    "netcdf4>=1.6",
]

[project.urls]
Homepage = "https://github.com/oceanum/waveray"
Repository = "https://github.com/oceanum/waveray"
Issues = "https://github.com/oceanum/waveray/issues"

[project.optional-dependencies]
datamesh = ["oceanum>=1.0"]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
